# ChangeLog for www-client/leechcraft
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +leechcraft-0.3.70_rc20100120.ebuild:
  add new RC ebuild

  18 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +leechcraft-0.3.70_rc20100117.ebuild:
  add snapshot ebuild

  15 Jan 2010; <slep@gentoo.org> leechcraft-9999.ebuild:
  fix

  28 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru> +metadata.xml:
  repoman fix
