@@ -1,7 +1,9 @@
 DIST leechcraft-0.3.70_rc20100120.tar.bz2 1060834 RMD160 9be8d4c87ae3731bb880e40facbe9fe895c91f0d SHA1 4504ace95ed5f882284d8cec17688f00f70648ee SHA256 402bc319aa8b8267fb230561e33e6acde9eafcd4e3ef667cea7d0755dcd7307e
 DIST leechcraft-0.3.70_rc20100125.tar.bz2 1070877 RMD160 2b0a9f792a2ea331fa0963a3624fd2f261a03ca5 SHA1 a34ab67a70e615441d4d3a49d246107955680f7f SHA256 3662967f0cd2c37dd4953c0820c6a6efa427fdc5fb23a1985622a14bc10a5477
+DIST leechcraft-0.3.70_rc20100202.tar.bz2 1083011 RMD160 93e76fca73ee36411d73e90144e7fa76b2affffc SHA1 7fec969399a702862bd0de4c14f2fd7ad9bcbd4f SHA256 8623420123578c7b7486ad51d99b652350453b8b181dae9a2fdeee108ef6cd7d
 EBUILD leechcraft-0.3.70_rc20100120.ebuild 2766 RMD160 ba66b8700e5cba2e3b2a2b4175164d973bde8476 SHA1 c3cb882600428aaf66e585c0cee19005708a5c84 SHA256 ec981a9f07927f85b3e0c42332b14ca3a177debaee04bc345a4dd3ec8f16b840
 EBUILD leechcraft-0.3.70_rc20100125.ebuild 2766 RMD160 ba66b8700e5cba2e3b2a2b4175164d973bde8476 SHA1 c3cb882600428aaf66e585c0cee19005708a5c84 SHA256 ec981a9f07927f85b3e0c42332b14ca3a177debaee04bc345a4dd3ec8f16b840
+EBUILD leechcraft-0.3.70_rc20100202.ebuild 2766 RMD160 ba66b8700e5cba2e3b2a2b4175164d973bde8476 SHA1 c3cb882600428aaf66e585c0cee19005708a5c84 SHA256 ec981a9f07927f85b3e0c42332b14ca3a177debaee04bc345a4dd3ec8f16b840
 EBUILD leechcraft-9999.ebuild 2929 RMD160 edfc409a4daacbb45b81ad91ea66c161aafd83eb SHA1 affa5ab9e0bebe918228fa080e1ae695cc00a3f3 SHA256 ca6cab05445e67a923117bed8172cd49141325b22445003e9f74e95c58b1730c
-MISC ChangeLog 499 RMD160 6558443dd4d3f2a7101be3ded00abc079070753b SHA1 1db5289eac212928306e83d38eeb8032ecbd02f0 SHA256 43e3c1eeb18c48cefd35bf5bf5ecf5c2e0900032ed1571d0ed5a8ec257e644d4
-MISC metadata.xml 1208 RMD160 32322844ede40156d1792356df2f0f16fd18cc57 SHA1 60625cae50c1b9f73b2d19dd68fc2d1dd070b0cd SHA256 f21d3215258b20e87011f2da391d0f38bfc6c87e0c7376cea0fce7a780f89ec8
+MISC ChangeLog 616 RMD160 64d89e3495bd15ea940f4dc73cde168d98cd2c78 SHA1 a747c066c9e88f9496b8239b8b5486bac87b4351 SHA256 89e1e825f2936c61fd9c5ca372b93ffb3aaa1ea1e899d277299968612985c3c4
+MISC metadata.xml 1209 RMD160 38ef0fee85e71a423eaaa8e4e660f51a8c9abc14 SHA1 1c5065e23346b90929a133f85942d97814bf9588 SHA256 a88ab849f2d6fb3bc0d811d9021c7c4598dcdfd31d95bf474e20b59f879694ca
